Tue Jun 14 14:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Updated Borland build instructions

Tue Jun 14 12:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Reactor_Timer_Interface.{h,cpp}:
          Moved destructor to a new cpp file to fix Cygwin warnings

        * ace/ace.mpc:
        * ace/Makefile.am:
          Added Reactor_Timer_Interface.cpp

Tue Jun 14 12:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/IO_Cntl_Msg.{h,cpp,inl}:
          Moved methods implemented in the header file to a new inl file.
          Fixes warnings in the Cygwin build

        * ace/ace.mpc:
        * ace/Makefile.am:
          Added IO_Cntl_Msg.cpp

Tue Jun 14 11:05:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Fixed typo in comment

Tue Jun 14 08:48:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/interceptors.mpb:
        * bin/MakeProjectCreator/config/portableserver.mpb:
        * bin/MakeProjectCreator/config/rtcorba.mpb:
        * bin/MakeProjectCreator/config/utils.mpb:
          Added pi as base project

Mon Jun 13 13:50:53 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * bin/ciao_tests.lst:

          Added the node application tests to the autobuilds.

Mon Jun 13 18:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/SCTP/SOCK_STREAM_clt.cpp:
          Fixed compile errors

Mon Jun 13 13:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release:
          Don't do LF->CRLF conversion for xls files, that are Microsoft
          Excel files. The RTCorba tests have such a file.

Mon Jun 13 13:48:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/pi.mpb:
          New base project for the new PI library we will add soon to the